[package]
name = "tear"
description = "Typed early returns and loop control + Syntax sugar for try!-like error handling"
version = "0.2.0"
authors = ["Tilwa Qendov <tilwa.qendov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# For crates.io
readme = "README.md"
repository = "https://github.com/tqdv/tear/"
keywords = ["early", "return", "try", "syntax", "error"]
categories = ["rust-patterns", "no-std"]

[badges]
maintenance.status = "passively-maintained"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
experimental = [] # For Try, which is experimental
ignore-ui    = [] # Ignore UI tests when developing
combinators  = ["either"] # Use either for combinators

[dependencies]
either = { version = "1.5", optional = true }

[dev-dependencies]
trybuild = "1.0"
